Created css file, made some adjustments to header look
Der skal stadig overvejes hvordan hjemmesiden endelig skal se ud, i mellem de to wix inspirationer. Farvevalgene er meget grimme lige nu, men ændre dem til sidst hvis jeg gør.

Strugglede med at få margins af headeren til at fungere som jeg ville, og skrive ved siden af billedet, i stedet for under. Fandt dog frem til en løsning, overvejer dog nu at ændre tilbage til text over og under billedet.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pink Panther</title>
 	<link rel="icon" href="img/PP Circle.png">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
+
 <body>
 	<!-- Header element -->
 	<header>
-		<img src="img/PP.jpg">
-		<h1>Hello!</h1>
-		<h2>I am the Pink Panther</h2>
-		<p>About the Pink Panther... blah blah blah blah. There is just so much to say about him. Blah blah blah blah.</p>
+		<div class="aligned">
+			<img src="img/Pink Panther.jpg">
+			<div class="text">
+				<h1>Hello!</h1>
+				<h2>I am the Pink Panther</h2>
+				<p>About the Pink Panther... blah blah blah blah. <br> 
+				There is just so much to say about him. Blah blah blah blah.</p>
+			</div>
+		</div>
 	</header>
 	
 	<!-- Main part of page. Transition part and detail -->
