Simple transition design
Turn up the pink aligned in center.

Huge class created, big font, align, padding, color and outline

uppercase class made

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 	<!-- Main part of page. Transition part and detail -->
 	<main>
-		<h1 class="huge">Turn <br> Up <br> The <br> Pink.</h1>
+		<h1 class="huge uppercase">Turn <br> Up <br> The <br> Pink.</h1>
 
 		<h1>The Inspector</h1>
 		<p>About the Inspector blah blah blah. Consider doing an unordered list here.</p>
