Split transition part of website and main part. Made boxes in bottom

--- a/index.html
+++ b/index.html
@@ -22,16 +22,25 @@
 		</div>
 	</header>
 	
+	<body>
+		<h3 class="huge uppercase">Turn <br> Up <br> The <br> Pink.</h3>
+	</body>
+
 	<!-- Main part of page. Transition part and detail -->
 	<main>
-		<h3 class="huge uppercase">Turn <br> Up <br> The <br> Pink.</h3>
+		<div class = "aligned">
+			<div class = "box">
+				<h1>The Inspector</h1>
+				<p>About the Inspector blah blah blah. Consider doing an unordered list here.</p>
+				<img src="img/Inspector look.png">
+			</div>
 
-		<h1>The Inspector</h1>
-		<p>About the Inspector blah blah blah. Consider doing an unordered list here.</p>
-		<img src="img/Inspector look.png">
-		<h1>Pink Panther</h1>
-		<p>About the Pink Panther blah blah blah. Consider doing an unordered list here.</p>
-		<img src="img/PP look.png">
+			<div class = "box">
+				<h1>Pink Panther</h1>
+				<p>About the Pink Panther blah blah blah. Consider doing an unordered list here.</p>
+				<img src="img/PP look.png">
+			</div>
+		</div>
 	</main>
 
 	<!-- Footer element -->
