--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	<!-- Main part of page. Transition part and detail -->
 	<main>
 		<div class = "aligned">
+
+			<!--Change this shit to container with boxes inside of it. YT history-->
 			<div class = "box">
 				<h1>The Inspector</h1>
 				<p>About the Inspector blah blah blah. Consider doing an unordered list here.</p>
