rage queue league kan ikke mere

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="aligned">
 			<img src="img/Pink Panther.jpg">
-			<div class="text">
+			<div class="headerText">
 				<h1>Hello!</h1>
 				<h2>I am the Pink Panther</h2>
 				<p>About the Pink Panther... blah blah blah blah. <br> 
@@ -29,18 +29,18 @@
 	<!-- Main part of page. Transition part and detail -->
 	<main>
 		<div class = "aligned">
+			<div class = "container">
+				<div class = "inspectorBox">
+					<h1>The Inspector</h1>
+					<p>About the Inspector blah blah blah. Consider doing an unordered list here.</p>
+					<img align = right; src="img/Inspector look.png">
+				</div>
 
-			<!--Change this shit to container with boxes inside of it. YT history-->
-			<div class = "box">
-				<h1>The Inspector</h1>
-				<p>About the Inspector blah blah blah. Consider doing an unordered list here.</p>
-				<img src="img/Inspector look.png">
-			</div>
-
-			<div class = "box">
-				<h1>Pink Panther</h1>
-				<p>About the Pink Panther blah blah blah. Consider doing an unordered list here.</p>
-				<img src="img/PP look.png">
+				<div class = "pantherBox">
+						<h1>Pink Panther</h1>
+						<p>About the Pink Panther blah blah blah. Consider doing an unordered list here.</p>
+						<img align="bottom-left" src="img/PP look.png">
+				</div>
 			</div>
 		</div>
 	</main>
