Small cleanup, not much progress on picture and text compatibility in the box

--- a/index.html
+++ b/index.html
@@ -28,21 +28,33 @@
 
 	<!-- Main part of page. Transition part and detail -->
 	<main>
-		<div class = "aligned">
-			<div class = "container">
-				<div class = "inspectorBox">
-					<h1>The Inspector</h1>
-					<p>About the Inspector blah blah blah. Consider doing an unordered list here.</p>
-					<img align = right; src="img/Inspector look.png">
+		<div class = "container">
+			<div class = "inspectorBox">
+				<h1>The Inspector</h1>
+				<ul class = "listText">
+					<li>About the Inspector blah blah blah, he's such a character.</li>
+					<br>
+					<li>The inspector is a huge part of the show.</li>
+					<br>
+					<li>The yellow detective trench coat is iconic for the character.</li>
+					<br>
+					<li>Some people are confused whether or not The Inspector and the Pink Panther are friends.</li>
+					<br>
+					<li>The inspector is a huge part of the show.</li>
+					<br>
+					<li>The inspector is a huge part of the show.</li>
+				</ul>
+				<div style="float: right;">
+					<img src="img/Inspector look.png" width="380px">
 				</div>
+			</div>
 
 				<div class = "pantherBox">
 						<h1>Pink Panther</h1>
-						<p>About the Pink Panther blah blah blah. Consider doing an unordered list here.</p>
-						<img align="bottom-left" src="img/PP look.png">
+						<p class = "listText">About the Pink Panther blah blah blah. Consider doing an unordered list here.</p>
+						<img src="img/PP look.png">
 				</div>
 			</div>
-		</div>
 	</main>
 
 	<!-- Footer element -->
