Finalized the website design. Plan complete
Fik styr på placering af billeder og tekst i de nederste bokse, og fik lavet det nederste footer copyright halløj. Den tegnede plan er nu fuldført, ikke at det er pænt, men done.

Ting gjort:
Liste gjort infoen om pink panther og inspectøren, samt lavet en header class til overskriften med mellemrum fra kanterne. Brug af relativ position på billederne og sat top position til 50 % ca. af hvad de kan. (Ved ikke helt hvorfor det virkede, men det gjorde det.)

Sat borderen op mellem de to sider i bunden, og ordnet margin af forskellige lementer så alt passer med de 15 px fra vægge osv.

mm.

--- a/index.html
+++ b/index.html
@@ -30,36 +30,58 @@
 	<main>
 		<div class = "container">
 			<div class = "inspectorBox">
-				<h1>The Inspector</h1>
-				<ul class = "listText">
-					<li>About the Inspector blah blah blah, he's such a character.</li>
-					<br>
-					<li>The inspector is a huge part of the show.</li>
-					<br>
-					<li>The yellow detective trench coat is iconic for the character.</li>
-					<br>
-					<li>Some people are confused whether or not The Inspector and the Pink Panther are friends.</li>
-					<br>
-					<li>The inspector is a huge part of the show.</li>
-					<br>
-					<li>The inspector is a huge part of the show.</li>
-				</ul>
-				<div style="float: right;">
-					<img src="img/Inspector look.png" width="380px">
+				<div>
+					<h1 class="listHeader">The Inspector</h1>
+					<ul class = "listText" style="list-style: none;">
+						<li>About the Inspector blah blah blah, he's such a character.</li>
+						<br>
+						<li>The inspector is a huge part of the show.</li>
+						<br>
+						<li>The yellow detective trench coat is iconic for the character.</li>
+						<br>
+						<li>Some people are confused whether or not The Inspector and the Pink Panther are friends.</li>
+						<br>
+						<li>The inspector is a huge part of the show.</li>
+						<br>
+						<li>The inspector is a great character</li>
+					</ul>
+				</div>
+				
+				<div>
+					<img style="position: relative; top: 50%;" src="img/Inspector look.png" width="430px">
 				</div>
 			</div>
 
-				<div class = "pantherBox">
-						<h1>Pink Panther</h1>
-						<p class = "listText">About the Pink Panther blah blah blah. Consider doing an unordered list here.</p>
-						<img src="img/PP look.png">
+			<div class = "pantherBox">
+				<div>
+					<img style="position: relative; top: 46%;" src="img/PP look.png" width="430px">
+				</div>
+				<div style="text-align: right;">					
+					<h1 class="listHeader">Pink Panther</h1>
+					<ul class = "listText" style="list-style: none; padding-right: 30px;">
+						<li>About the Pink Panther blah blah blah, he's such a character.</li>
+						<br>
+						<li>The Pink Panther is the most iconic pink character.</li>
+						<br>
+						<li>The Pink Panther intro song is so loved, fans have made a remix of it.</li>
+						<br>
+						<li>Some people actually thought panthers were pink because of the show.</li>
+						<br>
+						<li>The Pink Panther has lived through multiple generations.</li>
+						<br>
+						<li>The Pink Panther live action movie is god tier.</li>
+					</ul>
 				</div>
 			</div>
+		</div>
 	</main>
 
 	<!-- Footer element -->
 	<footer>
-		<p>This is just a practice site, made with the help of a <a href="https://taptapkaboom.com" target=_blank>Tap Tap Kaboom</a> class. &copy;</p>
+		<div class="footerBox">
+			<p>This is just a practice website, created with the help of a <a href="https://taptapkaboom.com" target=_blank>Tap Tap Kaboom</a> Skillshare class, led by Rich Armstrong.</p>
+			<p>All properties above &copy; Metro-Goldwyn-Mayer Studios Inc. All Rights Reserved.</p>
+		</div>
 	</footer>
 </body>
 </html>
